--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/main/java/com/deu/payday/util/PubMap.java=UTF-8
 encoding//src/main/webapp/WEB-INF/views/fix_info.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/goods.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/modal.jsp=UTF-8
